This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance, for the stable release version
============================================================================
9/19/23: Changed parameters for doing stage montage with image shift in
blocks; instead of a number of blocks, which is mag-dependent, it is specified
with the maximum allowed image shift.  BLOCK SIZES IN SETTINGS DO NOT APPLY.

9/14/23: Added warning when a string property appears to have comment after
it, and a message box if a C-style comment is unclosed.

9/14/23: Fixed beam getting off on JEOL/Hitachi after setting the View/Search
shift offset.

9/14/23: Fixed Step to and Adjust IS dialog to not lose value of checkbox for
taking an image.

9/12/23: Fixed use of speed factor when precooking a montage.

9/12/23: Added ability to set a rotation angle for diffraction images in the
camera length table.

9/12/23: Added cartridge ID from first call to get JEOL autoloader
data with index 0, and other information if valid, to inventory.

9/12/23: Added script command to move stage in background.

9/7/23: SEM_4-1-0beta22
9/7/23: Fixed installer copying shrmemframe, broken 7/22/23.

9/7/23: Added optional arguments to set number of holes in the
CombineHolesToMulti command, and added commands to set an item for tilt series
and to report if the navigator is acquiring.

9/7/23: Added OmegaCanDoNegativeShift property that can be set to eliminate
need for setting an energy offset; this is defaulted on if
JeolHasNitrogenClass is set.

8/19/23: Add script command to wait until user has clicked a new marker point.

8/19/23: Kept track if Navigator points are marked on an FFT so items will be
displayed either on FFTs or nonFFTs as appropriate.

8/10/23: SEM_4-1-0beta21
8/10/23: Added script command to report if a camera is inserted.
