@@ -33,6 +33,7 @@ struct ScriptLangPlugFuncs;
 #define SCRIPT_EVENT_NAME  "SEMScriptLangEvent"
 #define SCRIPT_NORMAL_EXIT  -123456
 #define SCRIPT_EXIT_NO_EXC  -654321
+#define SCRIPT_USER_STOP    -234561
 #define VARTYPE_ADD_FOR_NUM  10
 
 enum {VARTYPE_REGULAR, VARTYPE_PERSIST, VARTYPE_INDEX, VARTYPE_REPORT, VARTYPE_LOCAL};
